[project]
name = "pygetsource"
description = "Decompiler written in Python for Python"
authors = [
    { name = "Perceval Wajsburt", email = "perceval.wajsburt@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
urls.homepage = "https://github.com/perceval/pygetsource/"
urls.repository = "https://github.com/perceval/pygetsource/"
dynamic = ["version"]
requires-python = ">=3.7,<4.0"
dependencies = [
    "astunparse",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pygetsource*"]
namespaces = false

# ----- Development configuration -----
[project.optional-dependencies]
dev = [
    "pytest>=7.1.0,<8.0.0",
    "pytest-cov>=3.0.0,<5.0.0",
    "networkx>=3.1,<4.0",
    "pygraphviz>=1.11,<2.0",
]

[tool.setuptools.dynamic]
version = { attr = "pygetsource.__version__" }

# ----- Tests -----
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.report]
exclude_also = [
    "raise UnknownException"
]

# ----- Documentation -----
[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
fail-under = 8
exclude = ["docs", "build", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
ignore-regex = ['__(?!init).*__']
color = true
omit-covered-files = false

# ----- Linting & Testing -----
[tool.ruff]
fix = true
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
    "tests/test_py37.py",
    "tests/test_py38.py",
    "tests/test_py39.py",
    "tests/test_py310.py",
    "tests/test_py311.py",
    "tests/test_dev.py"
]
line-length = 200
select = [
    "E",
    "F",
    "W",
    "I001"
]
fixable = ["E", "F", "W", "I"]
