[project]
name = "pygetsource"
description = "A Python 3 decompiler"
authors = [
    { name = "Perceval Wajsbürt", email = "perceval.wajsburt@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
urls.homepage = "https://github.com/percevalw/pygetsource/"
urls.repository = "https://github.com/percevalw/pygetsource/"
dynamic = ["version"]
requires-python = ">=3.7,<4.0"
dependencies = [
    "astunparse",
    "typing_extensions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Utilities",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pygetsource*"]
namespaces = false

# ----- Development configuration -----
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage[toml]>=7.2.0",
    "networkx>=2.0.0,<4.0",
    "pygraphviz>=1.7,<2.0",
    "ipython>=6.0.0,<8.0.0",
]

[tool.setuptools.dynamic]
version = { attr = "pygetsource.__version__" }

# ----- Tests -----
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "raise .*Error",
    "raise .*Exception",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if DEBUG:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]

# ----- Documentation -----
[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
fail-under = 8
exclude = ["docs", "build", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
ignore-regex = ['__(?!init).*__']
color = true
omit-covered-files = false

# ----- Linting & Testing -----
[tool.ruff]
fix = true
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
    "tests/test_py37.py",
    "tests/test_py38.py",
    "tests/test_py39.py",
    "tests/test_py310.py",
    "tests/test_py311.py",
    "tests/test_dev.py"
]
line-length = 200
select = [
    "E",
    "F",
    "W",
    "I001"
]
fixable = ["E", "F", "W", "I"]
